--- a/twentyfour/src/main/AndroidManifest.xml
+++ b/twentyfour/src/main/AndroidManifest.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.twentyfour"
-    android:versionCode="9"
+    android:versionCode="10"
     android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
+        android:name="com.twentyfour.main.MyTestFlightApp"
         android:allowBackup="true"
+        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:debuggable="true"
-        android:name="com.twentyfour.main.MyTestFlightApp"
-        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >>
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+>
         <activity
             android:name="com.twentyfour.main.MainFragmentActivity"
             android:screenOrientation="portrait" >
@@ -31,11 +34,16 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
-        <activity android:name="com.facebook.LoginActivity"
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id" />
+
     </application>
 
 </manifest>
